--- a/index.html
+++ b/index.html
@@ -2,6 +2,35 @@
 <html>
 
 <head>
-LOL PLUG
+🇺🇸 SEGUIDORES MUNDIAIS 👇
+
+100 SEGUIDORES 2,00 R$
+ 
+200 SEGUIDORES 3,00 R$
+
+500 SEGUIDORES 7,00 R$
+
+1.500 SEGUIDORES 13,00 R$
+
+5.000 SEGUIDORES 40,00 R$
+ 
+10K SEGUIDORES 60,00 R$
+
+
+🇧🇷 SEGUIDORES BRASILEIROS 🇧🇷 
+
+🇧🇷 100 SEGUIDORES  3,00 R$
+
+🇧🇷 200 SEGUIDORES  5,00 R$
+
+🇧🇷 500 SEGUIDORES  12,50 R$
+
+🇧🇷 1.000 SEGUIDORES 25,00 R$
+
+🇧🇷 2.000 SEGUIDORES 50,00 R$
+
+🇧🇷 5.000 SEGUIDORES 125,00 R$
+
+🇧🇷 10K SEGUIDORES 250,00 R$
 
 </html>
