--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
-<!DOCTYPE<br>html>
+<!DOCTYPEhtml>
 <html>
 
 <head>
-🇺🇸<br>SEGUIDORES<br>MUNDIAIS<br>👇
+🇺🇸 SEGUIDORES MUNDIAIS 👇
 <br>
-100<br>SEGUIDORES<br>2,00<br>R$
+100 SEGUIDORES 2,00R$
 <br>
-200<br>SEGUIDORES<br>3,00<br>R$
-
-500<br>SEGUIDORES<br>7,00<br>R$
-
-1.500<br>SEGUIDORES<br>13,00<br>R$
-
-5.000<br>SEGUIDORES<br>40,00<br>R$
+200 SEGUIDORES 3,00R$
 <br>
-10K<br>SEGUIDORES<br>60,00<br>R$
+500 SEGUIDORES 7,00R$
+<br>
+1.500 SEGUIDORES 13,00R$
+<br>
+5.000 SEGUIDORES 40,00R$
+<br>
+10K SEGUIDORES 60,00R$
 <br>
 <br>
-🇧🇷<br>SEGUIDORES<br>BRASILEIROS<br>🇧🇷<br>
-
-🇧🇷<br>100<br>SEGUIDORES<br><br>3,00<br>R$
-
-🇧🇷<br>200<br>SEGUIDORES<br><br>5,00<br>R$
-
-🇧🇷<br>500<br>SEGUIDORES<br><br>12,50<br>R$
-
-🇧🇷<br>1.000<br>SEGUIDORES<br>25,00<br>R$
-
-🇧🇷<br>2.000<br>SEGUIDORES<br>50,00<br>R$
-
-🇧🇷<br>5.000<br>SEGUIDORES<br>125,00<br>R$
-
-🇧🇷<br>10K<br>SEGUIDORES<br>250,00<br>R$
+🇧🇷 SEGUIDORES BRASILEIROS 🇧🇷
 <br>
+🇧🇷 100 SEGUIDORES 3,00R$
+<br>
+🇧🇷 200 SEGUIDORES 5,00R$
+<br>
+🇧🇷 500 SEGUIDORES 12,50R$
+<br>
+🇧🇷 1.000 SEGUIDORES 25,00R$
+<br>
+🇧🇷 2.000 SEGUIDORES 50,00R$
+<br>
+🇧🇷 5.000 SEGUIDORES 125,00R$
+<br>
+🇧🇷 10K SEGUIDORES 250,00R$
+
 </html>
