--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="main">
                 <h1>Login</h1>
                 <div id="login">
+                  <div class="error">Login failed</div>
                                                 <form method="post" action="/index.php">
                                 <div>Username</div>
                                 <div><input type="text" name="login_usr"></div>
